<resources>
    <string name="app_name">KilroyApp</string>
    <string name="title_activity_maps">KilroyApp</string>
    <string name="title_activity_nfc">NfcActivity</string>
    <string name="default_note_text">Edit me!</string>
    <string name="write_to_tag">Neues Gästebuch erstellen</string>
    <string name="readMultipleRecordNDEFMessage">Reading multiple record NDEF message</string>
    <string name="readSingleRecordNDEFMessage">Reading single record NDEF message</string>
    <string name="noNfcMessage">No NFC support</string>
    <string name="nfcAvailableEnabled">NFC available and enabled</string>
    <string name="nfcAvailableDisabled">NFC available but disabled</string>
    <string name="readEmptyMessage">Empty message</string>
    <string name="readNonNDEFMessage">No NDEF message</string>
    <string name="ndefWriteFailed">Write failed</string>
    <string name="tagNotWritable">Tag not writable</string>
    <string name="tagTooSmallMessage">Message size %1$d bytes exceeds tag capacity of %2$d bytes</string>
    <string name="cannotWriteTechMessage">Cannot write tech or unformatted tag</string>
    <string name="ndefWriteSuccess">Write success</string>
    <string name="nfcSettingEnabled">NFC enabled in settings</string>
    <string name="nfcSettingDisabled">NFC disabled in settings</string>
    <string name="NfcReaderActivity">Tag Writer</string>
    <string name="action_write_tag">Gästebuch erstellen</string>
    <string name="Title">Titel</string>
    <string name="Content">Tag-Beschreibung</string>
    <string name="title_activity_nfc_write">Gästebuch erstellen</string>
    <string name="title_activity_nfc_read">Read NFC tag</string>
    <string name="Postboard">Gästebuch</string>
    <string name="action_create_comment">Kommentar erstellen</string>
    <string name="commentContentTextView">Inhalt</string>
    <string name="commentAuthorTextView">Autor</string>
    <string name="CommentActivity">Kommentar erstellen</string>
    <string name="was_ist_kilroy">Was ist Kilroy?</string>
    <string name="kilroy_explanation">Kilroy erlaubt es dem Nutzer digitale Gästebücher an real existierenden Orten zu erstellen. Dafür werden NFC-Tags an geeigneten Plätzen angebracht. Außerdem können in bereits existierenden Gästebüchern Kommentare hinterlassen werden.</string>
    <string name="find_postboard">Gästebücher werden durch Marker auf der Karte repräsentiert. Klickt man auf einen solchen, wird der Name des Gästebuchs über dem Marker angezeigt. Ein weiterer Klick auf den Namen öffnet ein Fenster, welches eine Beschreibung zum Auffinden des Gästebuchs beinhaltet.</string>
    <string name="eintrag_hinterlassen">Gästebucheintrag hinterlassen</string>
    <string name="anlegen">Gästebuch anlegen</string>
    <string name="how_to_post">Um einen Eintrag in einem Gästebuch zu hinterlassen, muss zuvor ein Gästebuch gefunden werden und dessen NFC-Tag mit dem Smartphone gescannt werden. Nun öffnet sich das zum Tag gehörende Gästebuch. Es öffnet sich nun ein Fenster mit Eingabefeldern für den Namen des Verfassers und für den Inhalt des Kommentars. Zum Posten des Kommentars klickt man auf den Button unter den Eingabefeldern.</string>
    <string name="create_postboard">Gästebuch anlegen</string>
    <string name="how_to_create_postboard">Um ein neues Gästebuch anzulegen, wird ein unbeschriebener NFC-Tag benötigt. In der Kartenansicht befindet sich im rechtem oberen Bereich ein Plussymbol. Ein Klick darauf öffnet die Ansicht zum Erstellen eines neuen Gästebuchs. Dort werden Name und eine Beschreibung zum Auffinden des Tags eingegeben. Anschließend klickt man auf den Erstellen-Button unterhalb des Eingabebereichs. Eine Aufforderung das Smartphone nun an den NFC-Tag zu halten erscheint. War das beschreiben erfolgreich ist das Gästebuch nun erstellt und wird angezeigt.</string>
    <string name="help">Hilfe</string>
    <string name="label_help">Hilfe</string>
    <string name="button_post">POST!</string>
    <string name="Write">Write</string>
    <string name="writer_infoView">Bitte halten Sie ihr Smartphone an den NFC Tag.</string>
    <string name="no_gps_detected">Erstellen nicht möglich, kein GPS-Signal!</string>
</resources>
